[package]
name = "arq-simul"
version = "0.4.0"
authors = ["Miguel Rodríguez Pérez <miguel@det.uvigo.gal>"]
edition = "2018"
description = "A simple discrete time event simulator that shows the behavior of the main ARQ algorithms. It is built with didactic objectives to be used in introductory Computer Networks subjects."

[dependencies]
structopt = "0.3"
stderrlog = "0.4"
log = "0.4"
rand =  "0.7"
rand_pcg = "0.2"

[dependencies.eee-hyst]
git = "https://github.com/migrax/HystEEE.git"
